--- a/App/Modules/Frontend/Views/layouts/common/store/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/store/header.phtml
@@ -78,7 +78,16 @@
 				?>
                              </li>
                            
-                           <li><a href="#">My Tours</a></li>
+                      	<li><!--<a href="#">My Tours</a>-->
+				<?php
+                                 if($storeVendor->vendorId){
+                                 echo $this->tag->linkTo("/../account/tours","My Tours");
+                                }
+                                   else{
+                                echo $this->tag->linkTo("/auth/login/","Account");
+                                }
+                                ?>
+			</li>
                     	     <li class="dropdown">
                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             	Support
