--- a/App/Modules/Frontend/Views/account/reviews.phtml
+++ b/App/Modules/Frontend/Views/account/reviews.phtml
@@ -356,6 +356,7 @@
 					</form>
 					<br class="clearboth">
                 </div>
+</div>
             <?php } ?>
         <?php } else { ?>
             List is empty
