--- a/App/Modules/Backend/Views/index/index.phtml
+++ b/App/Modules/Backend/Views/index/index.phtml
@@ -82,8 +82,15 @@
                             ?>
                             <tr>
                                 <td><?php echo $this->tag->linkTo(array($item->getUri(), $item->tourTitle, 'local' => false, 'target' => '_blank')); ?></td>
-                                <td><?php echo $item->tourVendor->vendor->firstName . ' ' . $item->tourVendor->vendor->lastName; ?></td>
-                                <td><?php echo $this->tag->linkTo(array($item->tourVendor->vendor->getStorFrontUri(), $item->tourVendor->vendor->businessName, 'local' => false, 'target' => '_blank')); ?></td>
+                                <td><?php if ($item->tourVendor->vendor != null) { ?>
+                                    <?php echo $item->tourVendor->vendor->firstName . ' ' . $item->tourVendor->vendor->lastName; ?>
+                                    <?php } ?>        
+                                </td>
+                                <td>
+                                    <?php if ($item->tourVendor->vendor != null) { ?>
+                                        <?php echo $this->tag->linkTo(array($item->tourVendor->vendor->getStorFrontUri(), $item->tourVendor->vendor->businessName, 'local' => false, 'target' => '_blank')); ?>
+                                    <?php } ?>        
+                                </td>
                                 <td><?php echo \Tourpage\Helpers\Utils::formatCurrency($item->tourPrice->getPrice()); ?></td>
                                 <td><?php echo $item->tourPrice->data->priceTypeText; ?></td>
                                 <td>
