added email content

--- a/App/Modules/Frontend/Views/auth/mail/active_new_account.phtml
+++ b/App/Modules/Frontend/Views/auth/mail/active_new_account.phtml
@@ -1,2 +1,3 @@
-Registration Successful <br />
-<a href="<?php echo $accountActivationUrl;?>">Active your Account</a>
+Registration Successful <br /><br>
+<p>The administrator will activate your account within 24hrs. Please contact if any urgency.</p>
+<a href="<?php echo $accountActivationUrl;?>">Activate your Account</a>
