--- a/App/Modules/Frontend/Views/account/index.phtml
+++ b/App/Modules/Frontend/Views/account/index.phtml
@@ -1,9 +1,10 @@
+<?php $this->flashSession->output() ?>
 <?php $this->partial('account/common/index_sidebar'); ?>
 <div class="layout contents">
     <form id="account-settings" class="form-horizontal" method="post" enctype="multipart/form-data">
         <h2><i class="glyphicon glyphicon-pencil"></i> Profile</h2>
         <div class="accout pic">
-            <p><?php echo $this->tag->image(array($this->member->avatarUri(\Tourpage\Models\Members::AVATAR_THUMB), "alt" => $this->member->getFullName(), "title" => $this->member->getFullName(), 'width' => 150, 'height' > 150)); ?></p>
+            <p><?php echo $this->tag->image(array($this->member->avatarUri(\Tourpage\Models\Members::AVATAR_MEDIUM), "alt" => $this->member->getFullName(), "title" => $this->member->getFullName(), 'width' => 150, 'height' > 150)); ?></p>
             <div class="right_filebox">
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Avatar</label>
