--- a/App/Modules/Supplier/Views/index/index.phtml
+++ b/App/Modules/Supplier/Views/index/index.phtml
@@ -27,8 +27,8 @@
 <div class="col-lg-3 col-md-3 col-sm-3">
 <div class="login-sec">
 <ul>
-<li><a class="sup_login" href="<?php echo $this->url->get('/public/auth/login'); ?>">login</a></li>
-<li><a class="sup_register" href="<?php echo $this->url->get('/public/auth/register'); ?>">Get Started Today</a></li>
+<li><a class="sup_login" href="<?php echo $this->url->get('/vendor/auth/login'); ?>">login</a></li>
+<li><a class="sup_register" href="<?php echo $this->url->get('/vendor/auth/register'); ?>">Get Started Today</a></li>
 
 </ul>
 <div class="clear"></div>
@@ -51,7 +51,7 @@
 <div class="banner-btn">
 <ul>
 <li><a class="sup_register b-pading b-color" href="#">Watch the Video</a></li>
-<li><a class="sup_register b-pading" href="#">Get Started Today</a></li>
+<li><a class="sup_register b-pading" href="/vendor/auth/register">Get Started Today</a></li>
 </ul>
 </div>
 </div>
@@ -126,7 +126,7 @@ id tollit menandri disputationi has. Ex omittam accusata honestatis mea, pro no 
 </div>
 
 <div class="feature-contant-btn">
-<a class="sup_register b-pading" href="#">Get Started Today</a>
+<a class="sup_register b-pading" href="/vendor/auth/register">Get Started Today</a>
 </div>
 
 
@@ -158,7 +158,7 @@ id tollit menandri disputationi has. Ex omittam accusata honestatis mea, pro no 
 </p>
 
 <div class="feature-contant-btn">
-<a class="sup_register b-pading" href="#">Get Started Today</a>
+<a class="sup_register b-pading" href="/vendor/auth/register">Get Started Today</a>
 </div>
 
 <div class="clear"></div>
