--- a/App/Modules/Frontend/Views/store/index.phtml
+++ b/App/Modules/Frontend/Views/store/index.phtml
@@ -128,7 +128,7 @@ echo $groupTour->tour->tourCity; } else { echo '';}
 		<li class="text-yellow">
 			<div id="star-rate-box-<?php echo $groupTour->tour->tourId; ?>"></div>
 			<script>jQuery(function () {
-				jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourRating ? $groupTour->tour->tourRating->getStar() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+				jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
 			});</script>
 		</li>
 		<li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
@@ -216,7 +216,7 @@ heart" aria-hidden="true"></i></div>
                                             <li class="text-yellow">
                                                 <div id="star-rate-grid-<?php echo $groupTour->tour->tourId; ?>"></div>
                                                 <script>jQuery(function() {
-                                                    jQuery('#star-rate-grid-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourRating ? $groupTour->tour->tourRating->getStar() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill:"#ede811"});
+                                                    jQuery('#star-rate-grid-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill:"#ede811"});
                                                 });</script>
                                             </li>
  <li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
@@ -446,9 +446,9 @@ else{ echo '';}*/?></strong>, Duration: <strong>
                                             </ol>       
                                             <ul class="review">
                                                 <li class="text-yellow">
-                                                    <div id="star-rate-grid-<?php echo $fromCategory->tour->tourId; ?>"></div>
+                                                    <div id="star-rate-subgrid-<?php echo $fromCategory->tour->tourId; ?>"></div>
                                                     <script>jQuery(function () {
-                                                        jQuery('#star-rate-grid-<?php echo $fromCategory->tour->tourId; ?>').rateYo({rating: <?php echo $fromCategory->tour->tourRating ? $fromCategory->tour->tourRating->getStar() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+                                                        jQuery('#star-rate-subgrid-<?php echo $fromCategory->tour->tourId; ?>').rateYo({rating: <?php echo $fromCategory->tour->tourReviews ? $fromCategory->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
                                                     });</script>
                                                 </li>
                                                 <li class="review-count">(<?php echo $fromCategory->tour->tourReviews ? $fromCategory->tour->tourReviews->count() : 0; ?>)</li>
