added cart total items link top nav

--- a/App/Modules/Frontend/Views/layouts/common/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/header.phtml
@@ -165,6 +165,7 @@ if ($banners && $banners->count() > 0) {
                                 <li><a href="#">Something else here</a></li>
   							</ul>
                         </li>
+                        <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Cart: <?php echo $this->cart->totalItem;?> tour(s)</a></li>
                     </ul>
                     <div class="clearfix"></div>
                 </div>
