--- a/App/Modules/Frontend/Views/layouts/common/store/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/store/header.phtml
@@ -90,7 +90,8 @@
 			</li>
                     	     <li class="dropdown">
                              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            	Support
+                            	
+
                             	<span class="caret"></span>
                             </a>
                         	  <ul class="dropdown-menu">
@@ -99,9 +100,11 @@
                                 <li><a href="#">Something else here</a></li>
   							</ul>
                         </li>
+						<li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Cart: <?php echo $this->cart->totalItem;?> tour(s)</a></li>
                       </ul>
                     <div class="clearfix"></div>
                 </div>
+
                 
                 <div class="clearfix"></div>
                 
