--- a/App/Modules/Frontend/Views/layouts/common/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/header.phtml
@@ -153,7 +153,9 @@ if ($banners && $banners->count() > 0) {
   							</ul>
                         </li>
                     	<li><a href="#">Favorites</a></li>
-                    	<li><a href="#">My Tours</a></li>
+                    	<?php if($this->member->isLoggedIn()) { ?>
+                            <li><a href="/account/tours">My Tours</a></li>
+                        <?php } ?>
                     	<li class="dropdown">
                         	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             	Support
