fix box view bugs for tours

--- a/App/Modules/Frontend/Views/store/index.phtml
+++ b/App/Modules/Frontend/Views/store/index.phtml
@@ -71,13 +71,18 @@
 
 
                    <div class="tour-box-smr-detail">
-                      <div class="tour-box-smr-review">
-                         <i class="fa fa-star" aria-hidden="true"></i> 
-<i class="fa fa-star" aria-hidden="true"></i>
-                             <i class="fa fa-star" aria-
-hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
-                                   <span>(1403)</span>
-                                      </div>
+						<div class="tour-box-smr-review">
+							<ul class="review">
+							   <li class="text-yellow">
+								   <div id="star-rate-box-<?php echo $groupTour->tour->tourId; ?>"></div>
+								   <script>
+									   jQuery(function () {
+									   jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+								   });</script>
+							   </li>
+							   <li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
+						   </ul>         
+						</div>
 
                     <div class="tour-box-smr-dtls">
                     <a href="<?php echo $groupTour->tour->getUri(); ?>"><?php echo $groupTour->tour->tourTitle; ?></a>
@@ -85,11 +90,9 @@ hidden="true"></i> <i class="fa fa-star" aria-hidden="true"></i>
                     </div>
                     
                     <div class="tour-box-smr-detail-bottom clearfix">
-                    <div class="tour-box-smr-detail-bottom-lft">Fellow 
-LLC •&nbsp;<?php 
-					if($groupTour->tour->tourCity){ 
-echo $groupTour->tour->tourCity; } else { echo '';}
-					?>
+                    <div class="tour-box-smr-detail-bottom-lft">Location:&nbsp;<?php 
+					if($groupTour->tour->tourCity){ echo $groupTour->tour->tourCity; } else { echo '';}
+					?><br>Duration: <?php echo $groupTour->tour->tourDuration->lengthTypeText;?>
                     </div>
                     <div class="tour-box-smr-detail-bottom-rht w-col">
 				   <?php if ($groupTour->tour->tourPrice->hasDiscount() || $groupTour->tour->tourPrice->hasOffers()){ ?>
