--- a/App/Modules/Frontend/Views/store/index.phtml
+++ b/App/Modules/Frontend/Views/store/index.phtml
@@ -74,10 +74,10 @@
 						<div class="tour-box-smr-review">
 							<ul class="review">
 							   <li class="text-yellow">
-								   <div id="star-rate-box-<?php echo $groupTour->tour->tourId; ?>"></div>
+								   <div id="star-rate-box-<?php echo $groupTour->tour->tourId . $groupTour->groupId; ?>"></div>
 								   <script>
 									   jQuery(function () {
-									   jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+									   jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId . $groupTour->groupId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
 								   });</script>
 							   </li>
 							   <li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
@@ -130,9 +130,9 @@
 <div class="tour-box-smr-review">
 	<ul class="review">
 		<li class="text-yellow">
-			<div id="star-rate-box-<?php echo $groupTour->tour->tourId; ?>"></div>
+			<div id="star-rate-box-<?php echo $groupTour->tour->tourId . $groupTour->groupId; ?>"></div>
 			<script>jQuery(function () {
-				jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+				jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId . $groupTour->groupId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
 			});</script>
 		</li>
 		<li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
@@ -218,9 +218,9 @@ heart" aria-hidden="true"></i></div>
                                         <h1><a href="javascript:redirectToSpecificPage('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>', 'tour_id')"><?php echo $groupTour->tour->tourTitle;?></a></h1>
                                         <ul class="review">
                                             <li class="text-yellow">
-                                                <div id="star-rate-grid-<?php echo $groupTour->tour->tourId; ?>"></div>
+                                                <div id="star-rate-grid-<?php echo $groupTour->tour->tourId.$groupTour->groupId; ?>"></div>
                                                 <script>jQuery(function() {
-                                                    jQuery('#star-rate-grid-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill:"#ede811"});
+                                                    jQuery('#star-rate-grid-<?php echo $groupTour->tour->tourId. $groupTour->groupId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill:"#ede811"});
                                                 });</script>
                                             </li>
  <li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
