--- a/App/Modules/Frontend/Views/store/tours.phtml
+++ b/App/Modules/Frontend/Views/store/tours.phtml
@@ -86,10 +86,10 @@
 					   -->
 						   <ul class="review">
 							   <li class="text-yellow">
-								   <div id="star-rate-box-<?php echo $groupTour->tour->tourId; ?>"></div>
+								   <div id="star-rate-box-<?php echo $groupTour->tour->tourId. $groupTour->groupId; ?>"></div>
 								   <script>
 									   jQuery(function () {
-									   jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+									   jQuery('#star-rate-box-<?php echo $groupTour->tour->tourId . $groupTour->groupId; ?>').rateYo({rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
 								   });</script>
 							   </li>
 							   <li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
@@ -153,9 +153,9 @@
 										<h1><a href="javascript:redirectToPageFromTours('<?php echo "/".strtolower((preg_replace('/[\s_]/', '', $storeVendor->businessName)))."/ourtours/".$groupTour->tour->tourSlug; ?>', '<?php echo $groupTour->tourId; ?>')"><?php echo $groupTour->tour->tourTitle; ?></a></h1>
                                         <ul class="review">
                                             <li class="text-yellow">
-                                                <div id="star-rate-grid-<?php echo $groupTour->tour->tourId; ?>"></div>
+                                                <div id="star-rate-grid-<?php echo $groupTour->tour->tourId . $groupTour->groupId; ?>"></div>
                                                 <script>jQuery(function () {
-                                                    jQuery('#star-rate-grid-<?php echo $groupTour->tour->tourId; ?>').rateYo({ rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
+                                                    jQuery('#star-rate-grid-<?php echo $groupTour->tour->tourId . $groupTour->groupId; ?>').rateYo({ rating: <?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>, starWidth: "15px", readOnly: true, ratedFill: "#ede811"});
                                                 });</script>
                                             </li>
                                             <li class="review-count">(<?php echo $groupTour->tour->tourReviews ? $groupTour->tour->tourReviews->count() : 0; ?>)</li>
