--- a/App/Modules/Backend/Views/settings/menu.phtml
+++ b/App/Modules/Backend/Views/settings/menu.phtml
@@ -14,7 +14,9 @@
         <a class="menu-index list-group-item list-group-item-danger" href="<?php echo $this->url->get('/admin/settings/banner/ads/index/home');?>"><i class="glyphicon glyphicon-play"></i> Home ad banners</a>
         <a class="menu-index list-group-item list-group-item-danger" href="<?php echo $this->url->get('/admin/settings/banner/ads/vendor/home');?>"><i class="glyphicon glyphicon-play"></i> Vendor Home ad banners</a>
         <a class="menu-index list-group-item list-group-item-danger" href="<?php echo $this->url->get('/admin/settings/banner/ads/index/vendorlogin');?>"><i class="glyphicon glyphicon-play"></i> Vendor Login Ad banner</a>
+        <a class="menu-index list-group-item list-group-item-danger" href="<?php echo $this->url->get('/admin/settings/banner/ads/index/vendorRegistration');?>"><i class="glyphicon glyphicon-play"></i> Vendor Registration Ad banner</a>
         <a class="menu-index list-group-item list-group-item-danger" href="<?php echo $this->url->get('/admin/settings/banner/ads/index/userlogin');?>"><i class="glyphicon glyphicon-play"></i> User Login Ad banner</a>
+        <a class="menu-index list-group-item list-group-item-danger" href="<?php echo $this->url->get('/admin/settings/banner/ads/index/userRegistration');?>"><i class="glyphicon glyphicon-play"></i> User Registration Ad banner</a>
         <a class="menu-index list-group-item list-group-item-danger" href="<?php echo $this->url->get('/admin/settings/banner/ads/announcement/vendordashboard');?>"><i class="glyphicon glyphicon-play"></i> Dashboard Announcement</a>
     </div>
 </div>
