--- a/App/Modules/Frontend/Views/auth/login.phtml
+++ b/App/Modules/Frontend/Views/auth/login.phtml
@@ -1,4 +1,4 @@
-<?php /*if ($banners && $banners->count() > 0) { ?>
+<?php if ($banners && $banners->count() > 0) { ?>
 <div id="login-ad" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -30,7 +30,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<?php }*/ ?>
+<?php } ?>
 
 
     <div class="container">
