display banners for user registration

--- a/App/Modules/Frontend/Views/auth/register.phtml
+++ b/App/Modules/Frontend/Views/auth/register.phtml
@@ -3,7 +3,39 @@
 $this->assets->outputJs();
 $this->assets->outputCss();
 ?>
-
+<?php if ($banners && $banners->count() > 0) { ?>
+<div id="login-ad" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <?php for($b = 0; $b < $banners->count(); $b++) { ?>
+            <li data-target="#login-ad" data-slide-to="<?php echo $b;?>"<?php echo $b==0?' class="active"':'';?>></li>
+        <?php } ?>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <?php $c = 1; foreach ($banners as $banner) { ?>
+            <div class="item<?php echo $c==1?' active':'';?>">
+                <?php if (!empty($banner->bannerLink)) { ?>
+                <a href="<?php echo $banner->bannerLink;?>" target="_blank">
+                <?php } ?>
+                <img src="<?php echo $banner->getBannerUri(); ?>" alt="Logn ad banner" style="width: 1405px; height: 400px;">
+                <?php if (!empty($banner->bannerLink)) { ?>
+                </a>
+                <?php } ?>
+            </div>
+        <?php $c++; } ?>
+    </div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#login-ad" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#login-ad" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+<?php } ?>
        <div class="container">
         <div class="login-content">
          <div class="col-lg-2 col-md-1"></div>
