remove banner header

--- a/App/Modules/Frontend/Views/auth/login.phtml
+++ b/App/Modules/Frontend/Views/auth/login.phtml
@@ -1,5 +1,5 @@
-<?php if ($banners && $banners->count() > 0) { ?>
-<div id="login-ad" class="carousel slide" data-ride="carousel">
+<?php //if ($banners && $banners->count() > 0) { ?>
+<div id="login-ad" class="carousel slide" data-ride="carousel" style="display: none;">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <?php for($b = 0; $b < $banners->count(); $b++) { ?>
@@ -30,7 +30,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-<?php } ?>
+<?php //} ?>
 
 
     <div class="container">
