--- a/App/Modules/Frontend/Views/auth/register.phtml
+++ b/App/Modules/Frontend/Views/auth/register.phtml
@@ -3,8 +3,8 @@
 $this->assets->outputJs();
 $this->assets->outputCss();
 ?>
-<?php if ($banners && $banners->count() > 0) { ?>
-<div id="login-ad" class="carousel slide" data-ride="carousel">
+<?php //if ($banners && $banners->count() > 0) { ?>
+<div id="login-ad" class="carousel slide" data-ride="carousel" style="display: none;">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <?php for($b = 0; $b < $banners->count(); $b++) { ?>
@@ -35,7 +35,7 @@ $this->assets->outputCss();
         <span class="sr-only">Next</span>
     </a>
 </div>
-<?php } ?>
+<?php //} ?>
        <div class="container">
         <div class="login-content">
          <div class="col-lg-2 col-md-1"></div>
