change link param

--- a/App/Modules/Frontend/Views/layouts/common/store/header.phtml
+++ b/App/Modules/Frontend/Views/layouts/common/store/header.phtml
@@ -53,7 +53,7 @@
 											}
                                              ?>">Users</a></li>
                              <li>
-                                <a href="<?php echo $this->url->get('/vendor/login'); ?>">Vendor</a>
+                                <a href="<?php echo $this->url->get('/vendor'); ?>">Vendor</a>
                                   <?php
 //                                 if($storeVendor->vendorId){
 //				echo $this->tag->linkTo("/account/index/".$storeVendor->vendorId,"Vendor");
